[tool.poetry]
name = "pwnm-back"
version = "0.1.0"
description = "PwnMachine backend"
authors = ["BitK <bitk@yeswehack.com>", "Maëlys Bras de fer <m.brasdefer@yeswehack.com>"]

[tool.poetry.dependencies]
aiofiles = "^0.6"
aiohttp = "^3.7.4"
aioredis = "^2a"
argon2-cffi = "^20.1"
ariadne = "^0.13"
dnspython = "^2.1.0"
docker = "^6"
psutil = "^5.8.0"
PyJWT = "^2.1"
pyotp = "^2.6"
python = "^3.9"
python-magic = "^0.4.24"
python-multipart = "^0.0.5"
starlette-context = "^0.3.2"
uvicorn = "0.19.0"
websockets = "^10"

[tool.poetry.dev-dependencies]
black = "^21.4b"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
